# arrgh

./: .agents  .claude  .gitignore  CHANGELOG.md  CONTEXT.md  Dockerfile  README.md  ROADMAP.md  api-live-tests  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  docs-site-index.astro.tmp  graphify-out  index.html  live-tests  package-lock.json  package.json  site.webmanifest
server/: .dockerignore  ArrghServer.csproj  ArrghServer.http  Cargo.toml  Dockerfile  MigrationBootstrap.cs  Program.cs  README.md  appsettings.json  arrgh-dev.db
server/.config/: nextest.toml
server/.sqlx/: query-00413e87f0cfccc8c95ab156249048aa49869696824d47b805584c4cc8e7ef73.json  query-018b6122e0bbdf72d2f86c71e4b98d7f6f545ae73545c517173c59c736f3e254.json  query-02aad956ee640c2d99beb4108750b1d299be8d1b9c59560f5c9ae3caa96cb0d6.json  query-02b938e9b914fb078eb75ee3d1598b7dc3e61962b9cd00673534e1e9cc09168c.json  query-02e057b0c36affbda33902ade39628f72a372386e7a88af6d1d3035716f29a5e.json  query-0480d100a1a95e6306c3e878a99b3cd2f46284ecb61fcd2bfdb39e5cbced4558.json  query-04de713a7ad82fc415f4a0c0b5981ce4665a8b4c44ebfff8c38032d084c94ddb.json  query-053c412ca9fa121216206624cc323b27200eceaa4c89fda28af1a6208b508a47.json  query-0625eda403b771452b70394692df66ef2c80c188e374e689ea9517d95e2540ea.json  query-0a2a188b6a383d2a5cb786f2d7412d8b70a24e65770ef162621a7bc0a45dfdb7.json  query-0c6c4b80884986ac72ea60d5ef64df109761492a97fb1b994dbb91b44ffc344d.json  query-0d15286b809037508b4205554b7b550c4465ee8855a7e2097c651a0a7dfd27b5.json  (+238 more)
server/Api/: Auth.cs  ChapterSync.cs  Chapters.cs  Logs.cs  (+8 more)
(+107072 files in other folders)
