[package]
name = "arrgh-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arrgh-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "macros", "migrate", "uuid", "chrono"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-cron-scheduler = "0.13"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
zip = "2"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
scraper = "0.21"
async-trait = "0.1"
jsonwebtoken = "9"
bcrypt = "0.15"
urlencoding = "2.1.3"
